[gd_scene load_steps=8 format=3 uid="uid://cdrtifqso22nn"]

[ext_resource type="Script" uid="uid://bynil6i5u62vj" path="res://scenes/objects/plants/corn.gd" id="1_hgaca"]
[ext_resource type="Texture2D" uid="uid://c70mnv2wvg13h" path="res://assets/objects/basic_plants.png" id="1_hm4is"]
[ext_resource type="PackedScene" uid="uid://jdr53wq86b5" path="res://scenes/objects/plants/flowering.tscn" id="2_5ucl7"]
[ext_resource type="PackedScene" uid="uid://cd73l5v2kohb1" path="res://scenes/components/hurt_component.tscn" id="2_aphyd"]
[ext_resource type="PackedScene" uid="uid://4sf5bs00lwkj" path="res://scenes/objects/plants/watering_particles.tscn" id="2_ofjf8"]
[ext_resource type="PackedScene" uid="uid://cr77v3u6icty3" path="res://scenes/objects/plants/growth_cycle_component.tscn" id="5_q3ekf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofjf8"]
size = Vector2(13, 8)

[node name="Corn" type="Node2D"]
script = ExtResource("1_hgaca")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("1_hm4is")
hframes = 6
vframes = 2
frame = 1

[node name="Flowering" parent="." instance=ExtResource("2_5ucl7")]

[node name="WateringParticles" parent="." instance=ExtResource("2_ofjf8")]

[node name="GrowthCycleComponent" parent="." instance=ExtResource("5_q3ekf")]

[node name="HurtComponent" parent="." instance=ExtResource("2_aphyd")]
tool = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_ofjf8")
